--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 	<div class="w3-container"><!-- place main content here and it will show up between header and footer.-->
 		
-		<p>Hello World! (Your name) is here.</p>		
+		<p>Hello World! Ehan Ali is here!!!</p>		
 
-	</div><!-- /content -->
+	</div><!-- added my name; my first edit!-->
 	
 	<footer class="w3-bottom w3-container w3-flat-carrot">
 		<p>This is the footer!</p>
